syntax = "proto3";
package tx.v0;
option go_package = "kwil/api/protobuf/tx/v0/gen/go";

import "common/v0/database.proto";

message GetSchemaRequest {
	string owner = 1;
	string name = 2;
}

message GetSchemaResponse {
	common.v0.Database database = 1;
}

message GetSchemaByIdRequest {
	string id = 1;
}